--- a/app/assets/stylesheets/grenander/navbar.css.scss
+++ b/app/assets/stylesheets/grenander/navbar.css.scss
@@ -38,6 +38,11 @@ body {
 	vertical-align: middle;
 }
 
+.navbar-dark .dropdown-menu a:active {
+	background-color: #46166B;
+	color: #EBE6F0;
+}
+
 .navbar-dark .dropdown-menu .dropdown-divider {
 	border-color: #46166B;
 	/*margin-top: 3px;*/
