--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark topbar" role="navigation">
   <div class="container">
-    <%= link_to application_name, root_path, class: 'navbar-brand navbar-logo' %>
+    <%= link_to application_name, "/", class: 'navbar-brand navbar-logo' %>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#user-util-collapse" aria-controls="user-util-collapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,16 +32,16 @@
 	        Online Content
 	      </a>
 	      <div class="dropdown-menu">
-	      	<a class="dropdown-item" href="#">Online Exhibits</a>
-	      	<a class="dropdown-item" href="#">Espy Project Execution Records</a>
-	        <a class="dropdown-item" href="#">University Photograph Collections</a>
-	        <a class="dropdown-item" href="#">Albany Student Press</a>
-	        <a class="dropdown-item" href="#">University Senate Legislation</a>
-	        <a class="dropdown-item" href="#">Yearbook Collection</a>
-	        <a class="dropdown-item" href="#">The Milne School</a>
-	        <a class="dropdown-item" href="#">WAMC Northeast Public Radio</a>
-	        <a class="dropdown-item" href="#">CSEA Publications</a>
-	        <a class="dropdown-item" href="#">More...</a>
+	      	<a class="dropdown-item" href="<%= request.base_url + "/exhibits" %>">Online Exhibits</a>
+	      	<a class="dropdown-item" href="<%= request.base_url + "/espy" %>">Espy Project Execution Records</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/uaphotos" %>">University Photograph Collections</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/asp" %>">Albany Student Press</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/senate" %>">University Senate Legislation</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/yearbooks" %>">Yearbook Collection</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/milne" %>">The Milne School</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/wamc" %>">WAMC Northeast Public Radio</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/csea" %>">CSEA Publications</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections" %>">More...</a>
 	      </div>
 	    </li>
 
@@ -50,19 +50,19 @@
 	        About
 	      </a>
 	      <div class="dropdown-menu">
-	        <a class="dropdown-item" href="#">Using the Archives</a>
-	        <a class="dropdown-item" href="#">Hours and Directions</a>
-	        <a class="dropdown-item" href="#">News Updates</a>
-	        <a class="dropdown-item" href="#">University Records</a>
-	        <a class="dropdown-item" href="#">Find Other Historical Repositories</a>
-	        <a class="dropdown-item" href="#">Awards</a>
-	        <a class="dropdown-item" href="#">Staff</a>
-	        <a class="dropdown-item" href="#">Documentation Site</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/visit" %>">Using the Archives</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/directions" %>">Hours and Directions</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/blog" %>">News Updates</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/ua/faq" %>">University Records</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/historicalresources" %>">Find Other Historical Repositories</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/awards" %>">Awards</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/staff" %>">Staff</a>
+	        <a class="dropdown-item" href="https://wiki.albany.edu/pages/viewpage.action?pageId=80544001">Documentation Site</a>
 	      </div>
 	    </li>
 
 	    <li class="nav-item">
-	      <a class="nav-link" href="#">Contact</a>
+	      <a class="nav-link" href="https://albany.libwizard.com/f/contactus?i_have_a_questi=Special%20Collections%20%26%20Archives">Contact</a>
 	    </li>
       </ul>
     </div>
