fixed title and typo in hyrax link

--- a/app/views/grenander/quick_search/pages/home.html.erb
+++ b/app/views/grenander/quick_search/pages/home.html.erb
@@ -1,3 +1,4 @@
+<% title %>
 <div class="col-lg-9 offset-lg-3">
 	<div id="about-searches" class="card">
 		
@@ -13,7 +14,7 @@
 						<li>If collections are not available online, you may request a few items to be digitized, or visit our reading room to view them in person.</li>
 					</ul>
 				</li>
-				<li><a href=""<%= request.base_url + "/catalog" %>">Online Content</a> (items that are available online because they have been digitized or were "born-digital," or created digitally)
+				<li><a href="<%= request.base_url + "/catalog" %>">Online Content</a> (items that are available online because they have been digitized or were "born-digital," or created digitally)
 					<ul>
 
 						<li>Digital Selections are also represented in Collections alongside simmilar materials that may not be available online.</li>
