--- a/app/views/grenander/quick_search/search/index.html.erb
+++ b/app/views/grenander/quick_search/search/index.html.erb
@@ -1,4 +1,5 @@
 <% title %>
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <%# render partial: 'layouts/quick_search/page_title', locals: { page_title: @page_title } %>
 <%# render partial: 'layouts/quick_search/search_form' %>
 
