fixed menu off page css bug

--- a/app/assets/stylesheets/grenander/navbar.css.scss
+++ b/app/assets/stylesheets/grenander/navbar.css.scss
@@ -54,6 +54,10 @@ body {
 	color: #403a60;
 }
 
+.navbar-dark .container {
+	justify-content: center;
+}
+
 .navbar-dark li a {
 	padding: 10px 10px;
 }
