--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -33,7 +33,7 @@
 	      </a>
 	      <div class="dropdown-menu">
 	      	<a class="dropdown-item" href="<%= request.base_url + "/web/selections" %>">About Online Content</a>
-		<a class="dropdown-item" href="<%= request.base_url + "/web/exhibits" %>">Online Exhibits</a>
+		<a class="dropdown-item" href="<%= request.base_url + "/history" %>">UAlbany History</a>
 	      	<a class="dropdown-item" href="<%= request.base_url + "/espy" %>">Espy Project Execution Records</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/uaphotos" %>">University Photograph Collections</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/asp" %>">Albany Student Press</a>
@@ -42,6 +42,7 @@
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/milne" %>">The Milne School</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/wamc" %>">WAMC Northeast Public Radio</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/csea" %>">CSEA Publications</a>
+		<a class="dropdown-item" href="<%= request.base_url + "/web/exhibits" %>">Online Exhibits</a>
 	      </div>
 	    </li>
 
