only q search param transfers over with other apps

--- a/app/views/grenander/_source_options.html.erb
+++ b/app/views/grenander/_source_options.html.erb
@@ -34,9 +34,9 @@
 <% arclightURI.query = arclightParams.to_query %>
 <% hyraxURI.query = hyraxParams.to_query %>
 <% historyURI.query = historyParams.to_query %>
-<% mathesURI.query = mathesFacet.to_query %>
-<% pamphletsURI.query = pamphletsFacet.to_query %>
-<% booksURI.query = booksFacet.to_query %>
+<% mathesURI.query = mathesParams.to_query %>
+<% pamphletsURI.query = pamphletsParams.to_query %>
+<% booksURI.query = booksParams.to_query %>
 
 
 <ul id="search-sources-menu" class="nav nav-pills flex-column search-sources">
