--- a/app/views/grenander/_search_bar.html.erb
+++ b/app/views/grenander/_search_bar.html.erb
@@ -2,12 +2,13 @@
     <div class="input-group">
 
         <% if @query  %>
-            <input name="q" id="params-q" value="<%= @query %>" placeholder="<%= @search_form_placeholder %>" class="search_q q form-control tt-input" type="text" />
+            <input name="q" id="params-q" aria-labelledby="searchLabel" value="<%= @query %>" placeholder="<%= @search_form_placeholder %>" class="search_q q form-control tt-input" type="text" />
         <% else %>
-            <input name="q" id="params-q" value="<%= @query %>" placeholder="<%= @search_form_placeholder %>" class="search_q q form-control tt-input" type="text"/>
+            <input name="q" id="params-q" aria-labelledby="searchLabel" value="<%= @query %>" placeholder="<%= @search_form_placeholder %>" class="search_q q form-control tt-input" type="text"/>
         <% end %>
+	<label id="searchLabel" for="search">Search</label>
         <span class="input-group-append">
-          <button type="submit" class="btn btn-primary search-btn" id="search">
+          <button aria-label="Search" type="submit" class="btn btn-primary search-btn" id="search">
             <span class="submit-search-text"></span>
             <i class="fa fa-search"></i>
           </button>
