--- a/app/views/grenander/quick_search/search/_result_with_thumbnail.html.erb
+++ b/app/views/grenander/quick_search/search/_result_with_thumbnail.html.erb
@@ -4,18 +4,18 @@
 <% unless result["mobile_link"] %>
     <div class="col-sm-3">
         <%= link_to result.link do %>
-            <%= image_tag result["thumbnail"], :class => 'img-thumbnail' %>
+            <%= image_tag result["thumbnail"], :class => 'img-thumbnail', :alt => "Thumbnail for " + result['title'] %>
         <% end %>
     </div>
 <% else %>
     <div class="col-sm-3 show-for-medium-up">
         <%= link_to result.link do %>
-            <%= image_tag result["thumbnail"], :class => 'img-thumbnail' %>
+            <%= image_tag result["thumbnail"], :class => 'img-thumbnail', :alt => "Thumbnail for " + result['title'] %>
         <% end %>
     </div>
     <div class="col-sm-3 show-for-small-only">
         <%= link_to result.mobile_link do %>
-            <%= image_tag result["thumbnail"], :class => 'img-thumbnail' %>
+            <%= image_tag result["thumbnail"], :class => 'img-thumbnail', :alt => "Thumbnail for " + result['title'] %>
         <% end %>
     </div>
 <% end %>
