updated bento home

--- a/app/views/grenander/quick_search/pages/home.html.erb
+++ b/app/views/grenander/quick_search/pages/home.html.erb
@@ -3,7 +3,7 @@
 	<div id="about-searches" class="card">
 		
 		<div class="card-body">
-			<h2 class="card-title">Everything</h2>
+			<h2 class="card-title">Collections</h2>
 
 			<h6 class="card-subtitle mb-4 text-muted">includes a combined search of:</h6>
 
