added harmful language links

--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -56,6 +56,7 @@
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/directions" %>">Hours and Directions</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/blog" %>">Blog Posts</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/ua/faq" %>">University Records</a>
+		<a class="dropdown-item" href="<%= request.base_url + "/web/harmful_language" %>">Harmful Language Statement</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/historicalresources" %>">Find Other Historical Repositories</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/awards" %>">Awards</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/staff" %>">Department Staff</a>
