--- a/app/views/layouts/grenander/_footer.html.erb
+++ b/app/views/layouts/grenander/_footer.html.erb
@@ -8,6 +8,7 @@
 						<p>Closed for some state holidays and winter intersession</p>
 						<p>Located on the top floor of the Science Library on the Uptown Campus</p>
 						<p><a href="https://archives.albany.edu/web/directions">Hours and Directions</a></p>
+						<p><a href="https://archives.albany.edu/web/harmful_language">Harmful Language Statement</a></p>
 					</div>
 					<div class="footRight">
 					<a href="https://library.albany.edu">
