--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -17,6 +17,24 @@
     content: '+';
 }
 
+.more-sources .btn-info:focus {
+	background-color: #138496 !important;
+	border-color: #117a8b !important;
+	box-shadow: 0 0 0 0.2rem rgba(58,176,195,0.5) !important;
+	outline: none !important;
+}
+
+.more-sources .btn-info:hover {
+	background-color: #138496 !important;
+	border-color: #117a8b !important;
+}
+
+.more-sources .btn-info:active {
+	background-color: #117a8b !important;
+	border-color: #10707f !important;
+}
+
+
 @media (min-width: 992px) {
 	.search-sources li.nav-item a {
 		display: block;
