--- a/app/views/layouts/blacklight.html.erb
+++ b/app/views/layouts/blacklight.html.erb
@@ -4,7 +4,7 @@
       <section id="content" class="<%= main_content_classes %> order-last" aria-label="<%= t('blacklight.search.documents.aria.search_results') %>">
         <%= render partial: 'grenander/search_source' %>
 
-        <%= content_for(:container_header) %>
+        <%# content_for(:container_header) %>
         <%= yield %>
       </section>
 
@@ -13,13 +13,13 @@
         <%= content_for(:sidebar) %>
       </section>
     <% else %>
-      <section id="content" class="<%= main_content_classes %> order-last" aria-label="<%= t('blacklight.search.documents.aria.search_results') %>">
+      <section class="col-md-12">
         <%= render partial: 'grenander/search_source' %>
 
         <%= content_for(:container_header) %>
         <%= yield %>
       </section>
-      <section id="sidebar" class="<%= sidebar_classes %> order-first" aria-label="<%= t('blacklight.search.documents.aria.limit_search') %>">
+      <section class="col-md-12">
         <%= render partial: 'grenander/source_options' %>
       </section>
     <% end %>
