--- a/app/views/grenander/_source_options.html.erb
+++ b/app/views/grenander/_source_options.html.erb
@@ -63,7 +63,7 @@
   </li>
 </ul>
 <div class="more-sources">
-  <a class="btn btn-info btn-sm collapsed" data-toggle="collapse" href="#collapseSources" role="button" aria-expanded="false" aria-controls="collapseSources">
+  <a class="btn btn-info btn-sm collapsed" data-bs-toggle="collapse" href="#collapseSources" role="button" aria-expanded="false" aria-controls="collapseSources">
     More
   </a>
   <div class="collapse" id="collapseSources">
