--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-md navbar-dark topbar" role="navigation">
   <div class="container">
     <%= link_to application_name, request.base_url, class: 'navbar-brand navbar-logo' %>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#user-util-collapse" aria-controls="user-util-collapse" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-target="#user-util-collapse" aria-controls="user-util-collapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="user-util-collapse">
       <ul class="navbar-nav">
       	<li class="nav-item dropdown">
-	      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+	      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">
 	        Collections
 	      </a>
 	      <div class="dropdown-menu">
@@ -28,7 +28,7 @@
 	    </li>
 
 	    <li class="nav-item dropdown">
-	      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+	      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">
 	        Online Content
 	      </a>
 	      <div class="dropdown-menu">
@@ -47,7 +47,7 @@
 	    </li>
 
 	    <li class="nav-item dropdown">
-	      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+	      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">
 	        About
 	      </a>
 	      <div class="dropdown-menu">
@@ -65,7 +65,7 @@
 	    </li>
 
 	    <li class="nav-item">
-	      <a class="nav-link" href="https://albany.libwizard.com/f/contactus?i_have_a_questi=Special%20Collections%20%26%20Archives">Contact</a>
+	      <a class="nav-link" href="https://albany.libwizard.com/f/contactus?i_have_a_questi=Special%20Collections%20%26%20Archives" class="modal-form">Contact</a>
 	    </li>
       </ul>
     </div>
