--- a/app/assets/stylesheets/grenander/blacklight.css
+++ b/app/assets/stylesheets/grenander/blacklight.css
@@ -12,6 +12,18 @@
 	margin-bottom: 1rem !important;
 }
 
+.btn-info:hover {
+	color: #fff;
+	background-color: #138496;
+	border-color: #117a8b;
+}
+
+.btn-info:active {
+	color: #fff;
+	background-color: #117a8b;
+	border-color: #10707f;
+}
+
 #documents article.document {
 	position: relative;
 	display: flex;
