--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -36,12 +36,12 @@
 		<a class="dropdown-item" href="<%= request.base_url + "/history" %>">UAlbany History</a>
 	      	<a class="dropdown-item" href="<%= request.base_url + "/espy" %>">Espy Project Execution Records</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/uaphotos" %>">University Photograph Collections</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/asp" %>">Albany Student Press</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/senate" %>">University Senate Legislation</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/yearbooks" %>">Yearbook Collection</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/ua809" %>">Albany Student Press</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/ua200aspace_d2c8b71621925e217ad002c36f27822a" %>">University Senate Legislation</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/ua807" %>">Yearbook Collection</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/milne" %>">The Milne School</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/wamc" %>">WAMC Northeast Public Radio</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/csea" %>">CSEA Publications</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/apap138" %>">WAMC Northeast Public Radio</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/apap015aspace_90e13b5a023aefdb6ab5d1de295703fc" %>">CSEA Publications</a>
 		<a class="dropdown-item" href="<%= request.base_url + "/web/exhibits" %>">Online Exhibits</a>
 	      </div>
 	    </li>
