--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -78,24 +78,32 @@
 
 .search-source {
 	padding-bottom: 1.2rem;
+	background-color: #642a90;
+	padding: 0rem 1.25rem;
+	z-index: 9;
+	top: 0px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+@media (max-width: 575.98px) {
+  .search-source {
+  	padding: 1rem;
+  }
+  .search-source .source-box .search-intro {
+  	margin: auto;
+  }
 }
 
 .search-query-form {
 	flex-grow: 1;	
 }
 
-.search-source .source-box {
-	background-color: #642a90;
-	min-height: 125px;
-	padding: 1.25rem 1rem 1.25rem 1.25rem;
-	z-index: 9;
-	top: 0px;
-	border-radius: calc(0.5rem - 1px);
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+.source-box {
 	background-image: image_url('grenander/search-lighten10.png');
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: top left;
+	min-height: 100px;
 }
 
 #search-sources-menu {
@@ -166,4 +174,5 @@
 
  .search-row {
  	/*background-image: url("https://archives.albany.edu/web/sliderImages/default/mpa3.jpg");*/
+ 	margin-bottom: 1rem;
  }
