--- a/app/views/grenander/_search_source.html.erb
+++ b/app/views/grenander/_search_source.html.erb
@@ -1,14 +1,8 @@
 <div class="d-flex align-items-center">
 	<div class="navbar navbar-expand-sm search-source flex-fill">
-		<div class="source-box <%= container_classes %>">
+		<div class="source-box container">
 			<h2 class="search-intro"><%= source_name %></h2>
-			<% if defined? render_search_bar %>
-				<%# For blacklight  %>
-				<%= render_search_bar %>
-			<% else %>
-				<%# For quicksearch  %>
-				<%= render partial: 'grenander/search_bar' %>
-			<% end %>
+			<%= render_search_bar %>
 		</div>
 	</div>
 </div>
