--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -24,6 +24,7 @@
 	        <div class="dropdown-divider"></div> 
 	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "description/", "repositories/", "all") %>">A-Z Complete List of Collections</a>
 	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "description/", "repositories/", "sub") %>">Subject Guides to Collections</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/historicalresources" %>">Find Other Historical Repositories</a>
 	      </div>
 	    </li>
 
@@ -55,10 +56,10 @@
 					<a class="dropdown-item" href="https://library.albany.edu/preservation">Preservation Lab</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/visit" %>">Using the Archives</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/directions" %>">Hours and Directions</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/teaching" %>">Instruction Support</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/outside_donors" %>">Donations</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/blog" %>">Blog Posts</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/ua/faq" %>">University Records</a>
-		<a class="dropdown-item" href="<%= request.base_url + "/harmful_language" %>">Harmful Language Statement</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/historicalresources" %>">Find Other Historical Repositories</a>
+					<a class="dropdown-item" href="<%= request.base_url + "/harmful_language" %>">Harmful Language Statement</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/awards" %>">Awards</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/staff" %>">Department Staff</a>
 	        <a class="dropdown-item" href="https://wiki.albany.edu/pages/viewpage.action?pageId=80544001">Documentation Site</a>
