updated matomo code and menu links

--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -24,6 +24,7 @@
 	        <div class="dropdown-divider"></div> 
 	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "description/", "repositories/", "all") %>">A-Z Complete List of Collections</a>
 	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "description/", "repositories/", "sub") %>">Subject Guides to Collections</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/historicalresources" %>">Find Other Historical Repositories</a>
 	      </div>
 	    </li>
 
@@ -32,17 +33,17 @@
 	        Online Content
 	      </a>
 	      <div class="dropdown-menu">
-	      	<a class="dropdown-item" href="<%= request.base_url + "/web/selections" %>">About Online Content</a>
+	      	<a class="dropdown-item" href="<%= request.base_url + "/selections" %>">About Online Content</a>
 		<a class="dropdown-item" href="<%= request.base_url + "/history" %>">UAlbany History</a>
 	      	<a class="dropdown-item" href="<%= request.base_url + "/espy" %>">Espy Project Execution Records</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/uaphotos" %>">University Photograph Collections</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/uaphotos" %>">University Photograph Collections</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/ua809" %>">Albany Student Press</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/ua200aspace_d2c8b71621925e217ad002c36f27822a" %>">University Senate Legislation</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/ua807" %>">Yearbook Collection</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/selections/milne" %>">The Milne School</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/selections/milne" %>">The Milne School</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/apap138" %>">WAMC Northeast Public Radio</a>
 	        <a class="dropdown-item" href="<%= request.base_url + "/description/catalog/apap015aspace_90e13b5a023aefdb6ab5d1de295703fc" %>">CSEA Publications</a>
-		<a class="dropdown-item" href="<%= request.base_url + "/web/exhibits" %>">Online Exhibits</a>
+		<a class="dropdown-item" href="<%= request.base_url + "/exhibits" %>">Online Exhibits</a>
 	      </div>
 	    </li>
 
@@ -51,15 +52,15 @@
 	        About
 	      </a>
 	      <div class="dropdown-menu">
-		<a class="dropdown-item" href="<%= request.base_url + "/web/mission" %>">Mission & Purpose</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/visit" %>">Using the Archives</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/directions" %>">Hours and Directions</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/blog" %>">Blog Posts</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/ua/faq" %>">University Records</a>
-		<a class="dropdown-item" href="<%= request.base_url + "/web/harmful_language" %>">Harmful Language Statement</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/historicalresources" %>">Find Other Historical Repositories</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/awards" %>">Awards</a>
-	        <a class="dropdown-item" href="<%= request.base_url + "/web/staff" %>">Department Staff</a>
+					<a class="dropdown-item" href="<%= request.base_url + "/mission" %>">Mission & Purpose</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/visit" %>">Using the Archives</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/directions" %>">Hours and Directions</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/teaching" %>">Instruction Support</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/outside_donors" %>">Donations</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/blog" %>">Blog Posts</a>
+					<a class="dropdown-item" href="<%= request.base_url + "/harmful_language" %>">Harmful Language Statement</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/awards" %>">Awards</a>
+	        <a class="dropdown-item" href="<%= request.base_url + "/staff" %>">Department Staff</a>
 	        <a class="dropdown-item" href="https://wiki.albany.edu/pages/viewpage.action?pageId=80544001">Documentation Site</a>
 	      </div>
 	    </li>
