draft at update changes

--- a/app/views/grenander/_search_source.html.erb
+++ b/app/views/grenander/_search_source.html.erb
@@ -9,9 +9,12 @@
 
 				  	
 				    <%= link_to bookmarks_path, id:'bookmarks_nav' do %>
-				      <i class="fa fa-bookmark"></i> <span class="bookmarks-label"><%= t('blacklight.header_links.bookmarks') %></span>
-				      <span class="open-paren">(</span><span data-role='bookmark-counter'><%= current_or_guest_user.bookmarks.count %></span><span class="close-paren">)</span>
-				    <% end %>
+					  <i class="fa fa-bookmark"></i>
+					  <span class="bookmarks-label"><%= t('blacklight.header_links.bookmarks') %></span>
+					  <span class="open-paren">(</span>
+					  <span data-role='bookmark-counter'><%= current_or_guest_user&.bookmarks&.count || 0 %></span>
+					  <span class="close-paren">)</span>
+					<% end %>
 
 				    <%# link_to t('blacklight.header_links.search_history'), blacklight.search_history_path, id:'history_nav' %>
 
