--- a/app/views/layouts/grenander/application.html.erb
+++ b/app/views/layouts/grenander/application.html.erb
@@ -8,7 +8,7 @@
   <%= csp_meta_tag %>
 
   <%= stylesheet_link_tag    "grenander/application", media: "all" %>
-  <%= javascript_include_tag "grenander/application" %>
+  <%= javascript_importmap_tags %>
 </head>
 <body>
 
